# umadev

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  README.zh-TW.md  README_EN.md
crates/umadev/: Cargo.toml
crates/umadev-agent/src/: adopt.rs  ask_question.rs  base_error.rs  coach.rs  config.rs  context.rs  continuous.rs  critics.rs  deploy.rs  director.rs  director_loop.rs  events.rs  experts.rs  fact_extract.rs  gates.rs  knowledge_feedback.rs  lessons.rs  lib.rs  phases.rs  plan_state.rs  planner.rs  review.rs  runner.rs  runtime_proof.rs  security.rs  self_evolve.rs  sizing_calibration.rs  state.rs  trust.rs  verify.rs
crates/umadev-contract/src/: extract.rs  validate.rs
crates/umadev-governance/src/: audit.rs  lib.rs  rules.rs
crates/umadev-host/: Cargo.toml
crates/umadev-host/src/: claude.rs  claude_session.rs  codex.rs  codex_session.rs  lib.rs  opencode_session.rs  stderr_tail.rs
crates/umadev-i18n/catalog/: en.toml  (+2 more)
crates/umadev-tui/: Cargo.toml
docs/: ARCHITECTURE.md  USER_GUIDE.md
docs/plans/: 2026-06-13-enterprise-enhancement.md
knowledge/design-systems/: anti-ai-slop.md  bold-geometric.md  design-system-deep-dive.md  editorial-clean.md  modern-minimal.md  soft-warm.md  tech-utility.md
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
npm/knowledge-corpus/: package.json
npm/model-e5-small/: package.json
npm/umadev/: README.md  package.json
umadev-website/: next.config.ts
(+20 files in other folders)
